# hm_jeans_webscrap

./: .gitignore  README.md  database_hm.sqlite  main.py  main_hm.py  obs.txt  pyproject.toml
jobs/: sql_to_json.py
jobs/hm/: cleaning.py  database_insertion.py  detail_product.py  showcase_products.py
