[tool.poetry]
name = "repl_python3_jeanbusinessproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"
SQLAlchemy = "^1.4.28"
numpy = "^1.22.0"
pandas = "^1.3.5"
beautifulsoup4 = "^4.10.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"